--- a/conformance_tests.yaml
+++ b/conformance_tests.yaml
@@ -3364,6 +3364,21 @@
   tags: [ resource, command_line_tool ]
   id: 256
 
+- job: tests/empty.json
+  tool: tests/params_broken_null.cwl
+  label: params_broken_null
+  doc: Test parameter reference that refers to null.something
+  should_fail: true
+  tags: [ command_line_tool ]
+  id: 257
+
+- job: tests/empty.json
+  tool: tests/params_broken_length_of_non_list.cwl
+  doc: Test paramer reference that refers to length of non-array input
+  should_fail: true
+  tags: [ command_line_tool ]
+  id: 258
+
 - $import: tests/string-interpolation/test-index.yaml
 
 - $import: tests/conditionals/test-index.yaml
