--- a/conformance_tests.yaml
+++ b/conformance_tests.yaml
@@ -3379,6 +3379,16 @@
   tags: [ command_line_tool ]
   id: 258
 
+- job: tests/length_non_array_input.yml
+  tool: tests/params_input_length_non_array.cwl
+  doc: Test 'length' in parameter reference where it does not refer to length of an array input
+  tags: [ command_line_tool ]
+  output:
+    output1: 1
+    output2: 2
+    output3: 3
+  id: 259
+
 - $import: tests/string-interpolation/test-index.yaml
 
 - $import: tests/conditionals/test-index.yaml
